fix workflow config mistake

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -4,10 +4,9 @@ name: Continuous Integration
 on:
   pull_request:
   push:
-    branches-ignore:
-      - main
     branches:
-      - development
+      - "development"
+      - "!main"
 
 jobs:
   prettier:
