--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,11 +1,7 @@
 name: Continuous Integration
 
 # This action works with pull requests and pushes
-on:
-  pull_request:
-    types:
-      - opened
-      - edited
+on: pull_request
 
 jobs:
   prettier:
