update pr workflow

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,7 +1,7 @@
 name: Continuous Integration
 
 # This action works with pull requests and pushes
-on: pull_request
+on: [pull_request, push]
 
 jobs:
   prettier:
