--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,7 +1,11 @@
 name: Continuous Integration
 
 # This action works with pull requests and pushes
-on: [pull_request, push]
+on:
+  pull_request:
+    types:
+      - opened
+      - edited
 
 jobs:
   prettier:
