--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,6 +1,5 @@
 name: Continuous Integration
 
-# This action works with pull requests and pushes
 on:
   pull_request:
     types: [opened, synchronize, reopened, edited]
@@ -13,11 +12,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          # Make sure the actual branch is checked out when running on pull requests
           ref: ${{ github.head_ref }}
 
       - name: Prettify code
         uses: creyD/prettier_action@v4.2
         with:
-          # This part is also where you can pass other options, for example:
+          only_changed: True
           prettier_options: --write .
